gen/wiki_markupParser.py
# Generated from D:/Git/Парсер Викиразмертки\wiki_markup.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class wiki_markupParser ( Parser ):

    grammarFileName = "wiki_markup.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'nowiki'", "'code'", "'syntaxhighlight'", 
                     "'pre'", "'math'", "'tt'", "'<ref'", "'ref'", "'name'", 
                     "'name '", "'='", "'{{{!}}'", "'{{!}}}'", "<INVALID>", 
                     "<INVALID>", "'=='", "'==='", "'===='", "'====='", 
                     "'======'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'`'", "'&'", "'''", "<INVALID>", "'@'", "'\\'", "'^'", 
                     "')'", "':'", "','", "<INVALID>", "'$'", "'.'", "'!'", 
                     "'/'", "'>'", "'-'", "'{'", "'['", "'<'", "'\u2116'", 
                     "'('", "'%'", "'|'", "'+'", "'\"'", "'?'", "'}'", "']'", 
                     "';'", "'#'", "'*'", "'~'", "'_'", "'{{!}}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "AnyText", "H1", "H2", "H3", 
                      "H4", "H5", "H6", "Digit", "KirillicLetter", "LatinLetter", 
                      "AcuteSymbol", "AmpersandSymbol", "ApostropheSymbol", 
                      "AssignmentSymbol", "AtEmailSymbol", "BackSlashSymbol", 
                      "CaretSymbol", "CloseParenthesisSymbol", "ColonSymbol", 
                      "CommaSymbol", "DashSymbol", "DollarSymbol", "DotSymbol", 
                      "ExclamationMarkSymbol", "ForwardSlashSymbol", "GreaterThanSymbol", 
                      "HyphenSymbol", "LeftCurlyBrace", "LeftSquareBracketSymbol", 
                      "LessThanSymbol", "NumSymbol", "OpenParenthesisSymbol", 
                      "PercentSymbol", "PipeSimbol", "PlusSymbol", "QuoteSymbol", 
                      "QuestionSymbol", "RightCurlyBrace", "RightSquareBracketSymbol", 
                      "SemicolonSymbol", "SharpSymbol", "StarSymbol", "TildeSymbol", 
                      "UnderscoreSymbol", "TableDelimitter", "Whitespace" ]

    RULE_wiki_article = 0
    RULE_elements_markup = 1
    RULE_tags = 2
    RULE_comment = 3
    RULE_text_comment = 4
    RULE_nowiki = 5
    RULE_code = 6
    RULE_syntaxhighlight = 7
    RULE_pre = 8
    RULE_math = 9
    RULE_tt = 10
    RULE_ref = 11
    RULE_ref_name = 12
    RULE_ref_content = 13
    RULE_other_tags = 14
    RULE_content_other_tags = 15
    RULE_template = 16
    RULE_template_element = 17
    RULE_ignore_element = 18
    RULE_ignore_content = 19
    RULE_table = 20
    RULE_link = 21
    RULE_link_element = 22
    RULE_url_or_email = 23
    RULE_content_url_or_email = 24
    RULE_lists = 25
    RULE_list_element = 26
    RULE_assignment = 27
    RULE_accentuation = 28
    RULE_logical_accentuation = 29
    RULE_structural_accentuation = 30
    RULE_text_accentuation = 31
    RULE_headers = 32
    RULE_contend_header = 33
    RULE_header1 = 34
    RULE_header2 = 35
    RULE_header3 = 36
    RULE_header4 = 37
    RULE_header5 = 38
    RULE_header6 = 39

    ruleNames =  [ "wiki_article", "elements_markup", "tags", "comment", 
                   "text_comment", "nowiki", "code", "syntaxhighlight", 
                   "pre", "math", "tt", "ref", "ref_name", "ref_content", 
                   "other_tags", "content_other_tags", "template", "template_element", 
                   "ignore_element", "ignore_content", "table", "link", 
                   "link_element", "url_or_email", "content_url_or_email", 
                   "lists", "list_element", "assignment", "accentuation", 
                   "logical_accentuation", "structural_accentuation", "text_accentuation", 
                   "headers", "contend_header", "header1", "header2", "header3", 
                   "header4", "header5", "header6" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    AnyText=14
    H1=15
    H2=16
    H3=17
    H4=18
    H5=19
    H6=20
    Digit=21
    KirillicLetter=22
    LatinLetter=23
    AcuteSymbol=24
    AmpersandSymbol=25
    ApostropheSymbol=26
    AssignmentSymbol=27
    AtEmailSymbol=28
    BackSlashSymbol=29
    CaretSymbol=30
    CloseParenthesisSymbol=31
    ColonSymbol=32
    CommaSymbol=33
    DashSymbol=34
    DollarSymbol=35
    DotSymbol=36
    ExclamationMarkSymbol=37
    ForwardSlashSymbol=38
    GreaterThanSymbol=39
    HyphenSymbol=40
    LeftCurlyBrace=41
    LeftSquareBracketSymbol=42
    LessThanSymbol=43
    NumSymbol=44
    OpenParenthesisSymbol=45
    PercentSymbol=46
    PipeSimbol=47
    PlusSymbol=48
    QuoteSymbol=49
    QuestionSymbol=50
    RightCurlyBrace=51
    RightSquareBracketSymbol=52
    SemicolonSymbol=53
    SharpSymbol=54
    StarSymbol=55
    TildeSymbol=56
    UnderscoreSymbol=57
    TableDelimitter=58
    Whitespace=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Wiki_articleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(wiki_markupParser.EOF, 0)

        def elements_markup(self):
            return self.getTypedRuleContext(wiki_markupParser.Elements_markupContext,0)


        def getRuleIndex(self):
            return wiki_markupParser.RULE_wiki_article

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWiki_article" ):
                listener.enterWiki_article(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWiki_article" ):
                listener.exitWiki_article(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWiki_article" ):
                return visitor.visitWiki_article(self)
            else:
                return visitor.visitChildren(self)




    def wiki_article(self):

        localctx = wiki_markupParser.Wiki_articleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_wiki_article)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << wiki_markupParser.T__6) | (1 << wiki_markupParser.T__10) | (1 << wiki_markupParser.T__11) | (1 << wiki_markupParser.AnyText) | (1 << wiki_markupParser.H1) | (1 << wiki_markupParser.H2) | (1 << wiki_markupParser.H3) | (1 << wiki_markupParser.H4) | (1 << wiki_markupParser.H5) | (1 << wiki_markupParser.H6) | (1 << wiki_markupParser.AmpersandSymbol) | (1 << wiki_markupParser.ApostropheSymbol) | (1 << wiki_markupParser.BackSlashSymbol) | (1 << wiki_markupParser.ColonSymbol) | (1 << wiki_markupParser.CommaSymbol) | (1 << wiki_markupParser.DashSymbol) | (1 << wiki_markupParser.DollarSymbol) | (1 << wiki_markupParser.DotSymbol) | (1 << wiki_markupParser.ExclamationMarkSymbol) | (1 << wiki_markupParser.ForwardSlashSymbol) | (1 << wiki_markupParser.HyphenSymbol) | (1 << wiki_markupParser.LeftCurlyBrace) | (1 << wiki_markupParser.LeftSquareBracketSymbol) | (1 << wiki_markupParser.LessThanSymbol) | (1 << wiki_markupParser.NumSymbol) | (1 << wiki_markupParser.OpenParenthesisSymbol) | (1 << wiki_markupParser.PercentSymbol) | (1 << wiki_markupParser.PlusSymbol) | (1 << wiki_markupParser.QuoteSymbol) | (1 << wiki_markupParser.QuestionSymbol) | (1 << wiki_markupParser.SemicolonSymbol) | (1 << wiki_markupParser.SharpSymbol) | (1 << wiki_markupParser.StarSymbol) | (1 << wiki_markupParser.TableDelimitter))) != 0):
                self.state = 80
                self.elements_markup()


            self.state = 83
            self.match(wiki_markupParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Elements_markupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tags(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.TagsContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.TagsContext,i)


        def link(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.LinkContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.LinkContext,i)


        def template(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.TemplateContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.TemplateContext,i)


        def table(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.TableContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.TableContext,i)


        def url_or_email(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.Url_or_emailContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.Url_or_emailContext,i)


        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.AssignmentContext,i)


        def lists(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.ListsContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.ListsContext,i)


        def headers(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.HeadersContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.HeadersContext,i)


        def accentuation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.AccentuationContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.AccentuationContext,i)


        def ignore_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wiki_markupParser.Ignore_elementContext)
            else:
                return self.getTypedRuleContext(wiki_markupParser.Ignore_elementContext,i)


        def AnyText(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.AnyText)
            else:
                return self.getToken(wiki_markupParser.AnyText, i)

        def CommaSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.CommaSymbol)
            else:
                return self.getToken(wiki_markupParser.CommaSymbol, i)

        def SemicolonSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.SemicolonSymbol)
            else:
                return self.getToken(wiki_markupParser.SemicolonSymbol, i)

        def AmpersandSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.AmpersandSymbol)
            else:
                return self.getToken(wiki_markupParser.AmpersandSymbol, i)

        def DashSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.DashSymbol)
            else:
                return self.getToken(wiki_markupParser.DashSymbol, i)

        def HyphenSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.HyphenSymbol)
            else:
                return self.getToken(wiki_markupParser.HyphenSymbol, i)

        def DotSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.DotSymbol)
            else:
                return self.getToken(wiki_markupParser.DotSymbol, i)

        def ApostropheSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.ApostropheSymbol)
            else:
                return self.getToken(wiki_markupParser.ApostropheSymbol, i)

        def ColonSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.ColonSymbol)
            else:
                return self.getToken(wiki_markupParser.ColonSymbol, i)

        def QuoteSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.QuoteSymbol)
            else:
                return self.getToken(wiki_markupParser.QuoteSymbol, i)

        def ForwardSlashSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.ForwardSlashSymbol)
            else:
                return self.getToken(wiki_markupParser.ForwardSlashSymbol, i)

        def ExclamationMarkSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.ExclamationMarkSymbol)
            else:
                return self.getToken(wiki_markupParser.ExclamationMarkSymbol, i)

        def DollarSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.DollarSymbol)
            else:
                return self.getToken(wiki_markupParser.DollarSymbol, i)

        def QuestionSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.QuestionSymbol)
            else:
                return self.getToken(wiki_markupParser.QuestionSymbol, i)

        def PlusSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.PlusSymbol)
            else:
                return self.getToken(wiki_markupParser.PlusSymbol, i)

        def NumSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.NumSymbol)
            else:
                return self.getToken(wiki_markupParser.NumSymbol, i)

        def PercentSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.PercentSymbol)
            else:
                return self.getToken(wiki_markupParser.PercentSymbol, i)

        def TableDelimitter(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.TableDelimitter)
            else:
                return self.getToken(wiki_markupParser.TableDelimitter, i)

        def BackSlashSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.BackSlashSymbol)
            else:
                return self.getToken(wiki_markupParser.BackSlashSymbol, i)

        def getRuleIndex(self):
            return wiki_markupParser.RULE_elements_markup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElements_markup" ):
                listener.enterElements_markup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElements_markup" ):
                listener.exitElements_markup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElements_markup" ):
                return visitor.visitElements_markup(self)
            else:
                return visitor.visitChildren(self)




    def elements_markup(self):

        localctx = wiki_markupParser.Elements_markupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_elements_markup)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 85
                        self.tags()
                        pass

                    elif la_ == 2:
                        self.state = 86
                        self.link()
                        pass

                    elif la_ == 3:
                        self.state = 87
                        self.template()
                        pass

                    elif la_ == 4:
                        self.state = 88
                        self.table()
                        pass

                    elif la_ == 5:
                        self.state = 89
                        self.url_or_email()
                        pass

                    elif la_ == 6:
                        self.state = 90
                        self.assignment()
                        pass

                    elif la_ == 7:
                        self.state = 91
                        self.lists()
                        pass

                    elif la_ == 8:
                        self.state = 92
                        self.headers()
                        pass

                    elif la_ == 9:
                        self.state = 93
                        self.accentuation()
                        pass

                    elif la_ == 10:
                        self.state = 94
                        self.ignore_element()
                        pass

                    elif la_ == 11:
                        self.state = 95
                        self.match(wiki_markupParser.AnyText)
                        pass

                    elif la_ == 12:
                        self.state = 96
                        self.match(wiki_markupParser.CommaSymbol)
                        pass

                    elif la_ == 13:
                        self.state = 97
                        self.match(wiki_markupParser.SemicolonSymbol)
                        pass

                    elif la_ == 14:
                        self.state = 98
                        self.match(wiki_markupParser.AmpersandSymbol)
                        pass

                    elif la_ == 15:
                        self.state = 99
                        self.match(wiki_markupParser.DashSymbol)
                        pass

                    elif la_ == 16:
                        self.state = 100
                        self.match(wiki_markupParser.HyphenSymbol)
                        pass

                    elif la_ == 17:
                        self.state = 101
                        self.match(wiki_markupParser.DotSymbol)
                        pass

                    elif la_ == 18:
                        self.state = 102
                        self.match(wiki_markupParser.ApostropheSymbol)
                        pass

                    elif la_ == 19:
                        self.state = 103
                        self.match(wiki_markupParser.ColonSymbol)
                        pass

                    elif la_ == 20:
                        self.state = 104
                        self.match(wiki_markupParser.QuoteSymbol)
                        pass

                    elif la_ == 21:
                        self.state = 105
                        self.match(wiki_markupParser.ForwardSlashSymbol)
                        pass

                    elif la_ == 22:
                        self.state = 106
                        self.match(wiki_markupParser.ExclamationMarkSymbol)
                        pass

                    elif la_ == 23:
                        self.state = 107
                        self.match(wiki_markupParser.DollarSymbol)
                        pass

                    elif la_ == 24:
                        self.state = 108
                        self.match(wiki_markupParser.QuestionSymbol)
                        pass

                    elif la_ == 25:
                        self.state = 109
                        self.match(wiki_markupParser.PlusSymbol)
                        pass

                    elif la_ == 26:
                        self.state = 110
                        self.match(wiki_markupParser.NumSymbol)
                        pass

                    elif la_ == 27:
                        self.state = 111
                        self.match(wiki_markupParser.PercentSymbol)
                        pass

                    elif la_ == 28:
                        self.state = 112
                        self.match(wiki_markupParser.TableDelimitter)
                        pass

                    elif la_ == 29:
                        self.state = 113
                        self.match(wiki_markupParser.BackSlashSymbol)
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 116 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TagsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ref(self):
            return self.getTypedRuleContext(wiki_markupParser.RefContext,0)


        def comment(self):
            return self.getTypedRuleContext(wiki_markupParser.CommentContext,0)


        def nowiki(self):
            return self.getTypedRuleContext(wiki_markupParser.NowikiContext,0)


        def code(self):
            return self.getTypedRuleContext(wiki_markupParser.CodeContext,0)


        def syntaxhighlight(self):
            return self.getTypedRuleContext(wiki_markupParser.SyntaxhighlightContext,0)


        def pre(self):
            return self.getTypedRuleContext(wiki_markupParser.PreContext,0)


        def math(self):
            return self.getTypedRuleContext(wiki_markupParser.MathContext,0)


        def tt(self):
            return self.getTypedRuleContext(wiki_markupParser.TtContext,0)


        def other_tags(self):
            return self.getTypedRuleContext(wiki_markupParser.Other_tagsContext,0)


        def getRuleIndex(self):
            return wiki_markupParser.RULE_tags

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTags" ):
                listener.enterTags(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTags" ):
                listener.exitTags(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTags" ):
                return visitor.visitTags(self)
            else:
                return visitor.visitChildren(self)




    def tags(self):

        localctx = wiki_markupParser.TagsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tags)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.ref()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.comment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.nowiki()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.code()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.syntaxhighlight()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.pre()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 124
                self.math()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 125
                self.tt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 126
                self.other_tags()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LessThanSymbol(self):
            return self.getToken(wiki_markupParser.LessThanSymbol, 0)

        def ExclamationMarkSymbol(self):
            return self.getToken(wiki_markupParser.ExclamationMarkSymbol, 0)

        def HyphenSymbol(self, i:int=None):
            if i is None:
                return self.getTokens(wiki_markupParser.HyphenSymbol)
            else:
                return self.getToken(wiki_markupParser.HyphenSymbol, i)

        def GreaterThanSymbol(self):
            return self.getToken(wiki_markupParser.GreaterThanSymbol, 0)

        def AnyText(self):
            return self.getToken(wiki_markupParser.AnyText, 0)

        def getRuleIndex(self):
            return wiki_markupParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = wiki_markupParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(wiki_markupParser.LessThanSymbol)
            self.state = 130
            self.match(wiki_markupParser.ExclamationMarkSymbol)
            self.state = 131
            self.match(wiki_markupParser.HyphenSymbol)
            self.state = 132
            self.match(wiki_markupParser.HyphenSymbol)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==wiki_markupParser.AnyText:
                self.state = 133
                self.match(wiki_markupParser.AnyText)

